--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,22 @@
 
 # MYSQL
-development:
-  adapter: mysql
-  encoding: utf8
-  database: contact2
-  pool: 5
-  username: root
-  password: 
-  socket: /tmp/mysql.sock
-  host: 127.0.0.1
-
+#development:
+#  adapter: mysql
+#  encoding: utf8
+#  database: contact2
+#  pool: 5
+#  username: root
+#  password: 
+#  socket: /tmp/mysql.sock
+#  host: 127.0.0.1
 
 # SQLite version 3.x
 #   gem install sqlite3
-#development:
-#  adapter: sqlite3
-#  database: db/development.sqlite3
-#  pool: 5
-#  timeout: 5000
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
